<resources>
    <string name="app_name">AndroidLoginButtonExample</string>
    <string name="title_activity_main1">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="sign_in_with_linkedin">Sign in with LinkedIn</string>
    <string name="sign_in_anonymous">Sign in Anonymous</string>
    <string name="no_icon_standard">No Icon</string>
    <string name="transparent_standard">Transparent</string>
    <string name="button_standard">Button</string>
    <string name="rounded_standard">Rounded</string>
</resources>
