<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C3C3B"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.shaishavgandhi.loginbuttons.GooglePlusButton
                android:id="@+id/google"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                app:iconSize="30dp" />

            <com.shaishavgandhi.loginbuttons.FacebookButton
                android:id="@+id/facebook"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                app:iconSize="30dp" />

            <com.shaishavgandhi.loginbuttons.TwitterButton
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                app:iconSize="30dp" />

            <com.shaishavgandhi.loginbuttons.LinkedInButton
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                app:iconSize="30dp" />

            <com.shaishavgandhi.loginbuttons.AnonButton
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                app:iconSize="30dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.shaishavgandhi.loginbuttons.GooglePlusButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/sign_in_with_google"
                android:textAlignment="center"
                app:iconSize="30dp"
                app:transparentBackground="true" />

            <com.shaishavgandhi.loginbuttons.FacebookButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/sign_in_with_facebook"
                app:iconSize="30dp" />


            <com.shaishavgandhi.loginbuttons.TwitterButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/sign_in_with_twitter"
                app:iconSize="30dp" />

            <com.shaishavgandhi.loginbuttons.LinkedInButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/sign_in_with_linkedin"
                app:iconSize="30dp" />

            <com.shaishavgandhi.loginbuttons.AnonButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/sign_in_anonymous"
                app:iconSize="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.shaishavgandhi.loginbuttons.GooglePlusButton
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_margin="2dp"
                android:textAlignment="center"
                app:iconSize="30dp"
                app:roundedCorner="true"
                app:roundedCornerRadius="75dp"
                app:transparentBackground="true" />

            <com.shaishavgandhi.loginbuttons.FacebookButton
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_margin="2dp"
                android:textAlignment="center"
                app:iconSize="30dp"
                app:roundedCorner="true"
                app:roundedCornerRadius="75dp"
                app:transparentBackground="true" />

            <com.shaishavgandhi.loginbuttons.TwitterButton
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_margin="2dp"
                android:textAlignment="center"
                app:iconSize="30dp"
                app:roundedCorner="true"
                app:roundedCornerRadius="75dp"
                app:transparentBackground="true" />

            <com.shaishavgandhi.loginbuttons.LinkedInButton
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_margin="2dp"
                android:textAlignment="center"
                app:iconSize="30dp"
                app:roundedCorner="true"
                app:roundedCornerRadius="75dp"
                app:transparentBackground="true" />


            <com.shaishavgandhi.loginbuttons.AnonButton
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_margin="2dp"
                android:textAlignment="center"
                app:iconSize="30dp"
                app:roundedCorner="true"
                app:roundedCornerRadius="75dp"
                app:transparentBackground="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.shaishavgandhi.loginbuttons.GooglePlusButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/sign_in_with_google"
                android:textAlignment="center"
                app:iconCenterAligned="false"
                app:iconSize="30dp"
                app:roundedCorner="true" />

            <com.shaishavgandhi.loginbuttons.FacebookButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/sign_in_with_facebook"
                app:iconCenterAligned="false"
                app:iconSize="30dp"
                app:roundedCorner="true"
                app:transparentBackground="true" />

            <com.shaishavgandhi.loginbuttons.TwitterButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/sign_in_with_twitter"
                app:iconCenterAligned="false"
                app:iconSize="30dp"
                app:roundedCorner="true" />

            <com.shaishavgandhi.loginbuttons.LinkedInButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/sign_in_with_linkedin"
                app:iconCenterAligned="false"
                app:iconSize="30dp"
                app:roundedCorner="true" />

            <com.shaishavgandhi.loginbuttons.AnonButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/sign_in_with_linkedin"
                app:iconCenterAligned="false"
                app:iconSize="30dp"
                app:roundedCorner="true" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
